Change to larger font size  for mobile font size

--- a/themes/sgsc/sass/_single.scss
+++ b/themes/sgsc/sass/_single.scss
@@ -22,4 +22,10 @@
       width: $d_width;
     }
   }
+  p {
+    font-size: $font_m-h2;
+    @media screen and (min-width: $mobile_width) {
+      font-size: $font_d-body;
+    }
+  }
 }
