--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -4050,6 +4050,11 @@ footer {
     @media screen and (min-width: 480px) {
       .single-post .content-area .site-main {
         width: 1024px; } }
+  .single-post .content-area p {
+    font-size: 16px; }
+    @media screen and (min-width: 480px) {
+      .single-post .content-area p {
+        font-size: 24px; } }
 
 /**
   ** 404 page
