--- a/themes/sgsc/sass/_header.scss
+++ b/themes/sgsc/sass/_header.scss
@@ -34,7 +34,7 @@
     border-radius: 25px;
     font-family: $font__header;
     right: 0;
-    top: 50px;
+    top: 3px;
     position: absolute;
     width: 85%;
     line-height: 3;
@@ -149,6 +149,7 @@
 
   .menu {
     height: 4rem;
+    width: 98%;
     align-self: flex-end;
   }
 
